[package]
name = "rand_core"
version = "0.2.1" # NB: When modifying, also modify html_root_url in lib.rs
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang-nursery/rand"
documentation = "https://docs.rs/rand_core"
homepage = "https://crates.io/crates/rand_core"
description = """
Core random number generator traits and tools for implementation.
"""
keywords = ["random", "rng"]
categories = ["algorithms", "no-std"]

[badges]
travis-ci = { repository = "rust-lang-nursery/rand" }
appveyor = { repository = "alexcrichton/rand" }

[lib]
crate-type = ["lib"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
panic = 'abort'

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
panic = 'abort'

[profile.test]
opt-level = 1
debug = 2
debug-assertions = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
panic = 'abort'

[features]
default = ["std"]
std = ["alloc"]    # use std library; should be default but for above bug
alloc = []  # enables Vec and Box support without std
serde1 = ["serde", "serde_derive"] # enables serde for BlockRng wrapper

[dependencies]
serde = { version = "1", optional = true, default-features = false }
serde_derive = { version = "^1.0.38", optional = true, default-features = false }
